--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>3er Trimestre - Nicolas Mateo</title>
 </head>
 <body>
-    <h1>hola papurri</h1>
+    <h1>hola caracola</h1>
+    <h2>Hemos creado el repo. Ahora un commit...</h2>
 </body>
 </html>
