--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>3er Trimestre - Nicolas Mateo</title>
 </head>
 <body>
+    <nav>
+        <a href="/index.html">P1</a>
+        <a href="/pagina2.html">P2</a>
+    </nav>
     <h1>hola caracola</h1>
     <h2>Hemos creado el repo. Ahora un commit...</h2>
+
 </body>
 </html>
