--- a/pagina2.html
+++ b/pagina2.html
@@ -7,7 +7,11 @@
     <title>Pagina 2 - Nicolas Mateo</title>
 </head>
 <body>
+    <nav>
+        <a href="./index.html">P1</a>
+        <a href="./pagina2.html">P2</a>
+    </nav>
     <h1>Pagina 2</h1>
-    
+
 </body>
 </html>
