--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3er Trimestre - Nicolas Mateo</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilop1.css">
 </head>
 <body>
     <nav>
