--- a/pagina2.html
+++ b/pagina2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina 2 - Nicolas Mateo</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilop2.css">
 </head>
 <body>
     <nav>
