--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <nav>
         <a href="./index.html">P1</a>
         <a href="./pagina2.html">P2</a>
+        <a href="./flex2.html">Ejercicio piramide</a>
     </nav>
     <h1>hola caracola</h1>
     <h2>Hemos creado el repo. Ahora un commit...</h2>
