--- a/colorClick.html
+++ b/colorClick.html
@@ -12,15 +12,15 @@
 <body>
     <main id="pantalla">
         <article>
-            <div id="c1">1</div>
-            <div id="c2">2</div>
+            <div id="c1" onclick="saludarc1()">1</div>
+            <div id="c2" onclick="saludarc2()">2</div>
         </article>
         <article id="fc">
-            <div id="c3">3</div>
+            <div id="c3" onclick="saludarc3()">3</div>
         </article>
         <article>
-            <div id="c4">4</div>
-            <div id="c5">5</div>
+            <div id="c4" onclick="saludarc4()">4</div>
+            <div id="c5" onclick="saludarc5()">5</div>
         </article>
     </main>
     <script src="./flex3.js"></script>
