--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <a href="./index.html">P1</a>
         <a href="./pagina2.html">P2</a>
         <a href="./flex2.html">Ejercicio cajas</a>
+        <a href="./colorClick.html">Color Click</a>
     </nav>
     <h1>hola caracola</h1>
     <h2>Hemos creado el repo. Ahora un commit...</h2>
