--- a/colorClick.html
+++ b/colorClick.html
@@ -12,17 +12,17 @@
 <body>
     <main id="pantalla">
         <article>
-            <div id="c1" onclick="saludarc1()">1</div>
-            <div id="c2" onclick="saludarc2()">2</div>
+            <div id="c1" onclick="saludar('1')" oncontextmenu="eligeColor(1)">1</div>
+            <div id="c2" onclick="saludar('2')" oncontextmenu="eligeColor(2)">2</div>
         </article>
         <article id="fc">
-            <div id="c3" onclick="saludarc3()">3</div>
+            <div id="c3" onclick="saludar('3')" oncontextmenu="eligeColor(3)">3</div>
         </article>
         <article>
-            <div id="c4" onclick="saludarc4()">4</div>
-            <div id="c5" onclick="saludarc5()">5</div>
+            <div id="c4" onclick="saludar('4')" oncontextmenu="eligeColor(4)">4</div>
+            <div id="c5" onclick="saludar('5')" oncontextmenu="eligeColor(5)">5</div>
         </article>
     </main>
-    <script src="./flex3.js"></script>
+    <script src="./flex4 arrays.js"></script>
 </body>
 </html>
