--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="./pagina2.html">P2</a>
         <a href="./flex2.html">Ejercicio cajas</a>
         <a href="./colorClick.html">Color Click</a>
+        <a href="./tresEnRalla.html">3 en ralla</a>
     </nav>
     <h1>hola caracola</h1>
     <h2>Hemos creado el repo. Ahora un commit...</h2>
