--- a/tresEnRalla.html
+++ b/tresEnRalla.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3 en ralla</title>
-    <link rel="stylesheet" href="tresEnRalla.css">
+    <link rel="stylesheet" href="./tresEnRalla.css">
 </head>
 
 <body>
