--- a/index.html
+++ b/index.html
@@ -6,18 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3er Trimestre - Nicolas Mateo</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="estilop1.css">
 </head>
 <body>
     <nav>
-        <a href="./index.html">P1</a>
-        <a href="./pagina2.html">P2</a>
-        <a href="./flex2.html">Ejercicio cajas</a>
-        <a href="./colorClick.html">Color Click</a>
-        <a href="./tresEnRalla.html">3 en ralla</a>
+        <a href="./pagina2.html">Más informacion</a>
+        <a href="./tresEnRalla.html">Un Juego</a>
     </nav>
-    <h1>hola caracola</h1>
-    <h2>Hemos creado el repo. Ahora un commit...</h2>
-
 </body>
 </html>
