--- a/pagina2.html
+++ b/pagina2.html
@@ -5,15 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina 2 - Nicolas Mateo</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="estilop2.css">
 </head>
 <body>
-    <nav>
-        <a href="./index.html">P1</a>
-        <a href="./pagina2.html">P2</a>
-    </nav>
-    <h1>Pagina 2</h1>
-
+    <script src="./alert.js"></script>
 </body>
 </html>
