--- a/paginaFinal.html
+++ b/paginaFinal.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="./estilosFinal.css">
 </head>
 <body>
-  <header>
+  <header id="inicio">
     <h1>Festival de Música</h1>
     <nav>
       <ul>
@@ -20,7 +20,7 @@
     </nav>
   </header>
   
-  <section id="inicio">
+  <section>
     <div class="hero-image">
       <div class="hero-text">
         <h2>¡Bienvenido al Festival de Música!</h2>
