--- a/paginaFinal.html
+++ b/paginaFinal.html
@@ -34,27 +34,27 @@
     <h2>Artistas Destacados</h2>
     <div class="artist-container">
       <div class="artist">
-        <img src="./images/craiyon_172614_Electra_Starlight.png" alt="Artista 1">
+        <img src="./images/craiyon_172614_Electra_Starlight.png" alt="Artista 1" title="Electra Starlight">
         <h3>Electra Starlight</h3>
         <p>Electra Starlight es una artista electropop conocida por su estilo único y su voz seductora. Sus letras inteligentes y su habilidad para combinar ritmos pegadizos con elementos electrónicos la convierten en una verdadera sensación en el escenario. Electra es famosa por su energía enérgica y sus impresionantes performances visuales, que incluyen trajes futuristas y coreografías elaboradas.</p>
       </div>
       <div class="artist">
-        <img src="./images/craiyon_172726_The_Velvet_Souls.png" alt="Artista 2">
+        <img src="./images/craiyon_172726_The_Velvet_Souls.png" alt="Artista 2" title="The Velvet Souls">
         <h3>The Velvet Souls</h3>
         <p>The Velvet Souls es un grupo de música formado por cinco talentosos cantantes y músicos. Su sonido distintivo combina influencias del R&B clásico y el soul contemporáneo, creando una experiencia auditiva y emocionalmente cautivadora. Con armonías suaves y melodías soulful, The Velvet Souls tienen la habilidad de transportar a su audiencia a un viaje musical nostálgico con un toque moderno.</p>
       </div>
       <div class="artist">
-        <img src="./images/craiyon_173315_Luna_Verde.png" alt="Artista 3">
+        <img src="./images/craiyon_173315_Luna_Verde.png" alt="Artista 3" title="Luna Verde">
         <h3>Luna Verde</h3>
         <p>Luna Verde es una cantautora de folk alternativo que cautiva con su voz suave y melancólica. Sus letras poéticas y su habilidad para tocar múltiples instrumentos, como la guitarra acústica y el violín, crean una atmósfera íntima y emotiva. Con su estilo bohemio y letras introspectivas, Luna Verde se conecta profundamente con su audiencia, dejando una impresión duradera.</p>
       </div>
       <div class="artist">
-        <img src="./images/craiyon_173933_The_Thunderbeats.png" alt="Artista 4">
+        <img src="./images/craiyon_173933_The_Thunderbeats.png" alt="Artista 4" title="The Thunderbeats">
         <h3>The Thunderbeats</h3>
         <p>The Thunderbeats es una banda de rock & roll que hace vibrar los escenarios con su energía inigualable y su actitud rebelde. Sus riffs de guitarra poderosos, el bajo contundente y los solos de batería estruendosos forman el núcleo de su sonido explosivo. Con letras llenas de rebeldía y pasión, The Thunderbeats hacen que el público salte, grite y se entregue por completo.</p>
       </div>
       <div class="artist">
-        <img src="./images/craiyon_173956_Aurora_Latina.png" alt="Artista 5">
+        <img src="./images/craiyon_173956_Aurora_Latina.png" alt="Artista 5" title="Aurora Latina">
         <h3>Aurora Latina</h3>
         <p>Aurora Latina es una talentosa cantante y bailarina que fusiona ritmos latinos y africanos en su música. Su voz enérgica y su presencia magnética en el escenario encienden una chispa en el corazón de todos los espectadores. Con una banda que combina instrumentos tradicionales y modernos, Aurora Latina crea un ambiente festivo y contagioso que invita a la audiencia a moverse y celebrar la diversidad cultural.</p>
       </div>
@@ -74,14 +74,14 @@
         <td>Día 1</td>
         <td>19:00 - 20:30</td>
         <td>
-          <img src="./images/craiyon_175438_Concierto_de_Electra_Starlight.png" alt="Artista 6">
+          <img src="./images/craiyon_175438_Concierto_de_Electra_Starlight.png" alt="Artista 6" title="Electra Starlight">
           <p>Electra Starlight</p>
         </td>
       </tr>
       <td>Día 1</td>
         <td>21:30 - 23:00</td>
         <td>
-          <img src="./images/craiyon_175459_Concierto_de_Luna_Verde.png" alt="Artista 6">
+          <img src="./images/craiyon_175459_Concierto_de_Luna_Verde.png" alt="Artista 6" title="Luna Verde">
           <p>Luna Verde</p>
         </td>
       </tr>
@@ -89,7 +89,7 @@
         <td>Día 2</td>
         <td>21:00 - 22:30</td>
         <td>
-          <img src="./images/craiyon_175249_Concierto_The_Velvet_Souls.png" alt="Artista 7">
+          <img src="./images/craiyon_175249_Concierto_The_Velvet_Souls.png" alt="Artista 7" title="Velvet Souls">
           <p>The Velvet Souls</p>
         </td>
       </tr>
@@ -97,7 +97,7 @@
         <td>Día 3</td>
         <td>18:30 - 20:00</td>
         <td>
-          <img src="./images/craiyon_175309_Concierto_de_Aurora_Latina.png" alt="Artista 8">
+          <img src="./images/craiyon_175309_Concierto_de_Aurora_Latina.png" alt="Artista 8" title="Aurora Latina">
           <p>Aurora Latina</p>
         </td>
       </tr>
@@ -105,7 +105,7 @@
         <td>Día 3</td>
         <td>21:30 - 23:00</td>
         <td>
-          <img src="./images/craiyon_175349_Concierto_de_The_Thunderbeats.png" alt="Artista 9">
+          <img src="./images/craiyon_175349_Concierto_de_The_Thunderbeats.png" alt="Artista 9" title="The Thunderbeats">
           <p>The Thunderbeats</p>
         </td>
       </tr>
@@ -118,7 +118,7 @@
     <h2>Comprar entradas</h2>
     <div class="ticket-container">
       <div class="ticket-image">
-        <img src="./images/craiyon_174928_Ventas_de_entradas_en_festival_de_musica.png" alt="Venta de entradas">
+        <img src="./images/craiyon_174928_Ventas_de_entradas_en_festival_de_musica.png" alt="Venta de entradas" title="Venta de entradas">
       </div>
       <div class="ticket-form">
         <form>
@@ -149,17 +149,17 @@
     <h2>Últimas Noticias</h2>
     <div class="news-container">
       <div class="news">
-        <img src="./images/craiyon_173912_Estrella_del_pop_internacional_sorprende_a_los_fans_en_el_Festival_de_M_sica__pica.png" alt="Noticia 1">
+        <img src="./images/craiyon_173912_Estrella_del_pop_internacional_sorprende_a_los_fans_en_el_Festival_de_M_sica__pica.png" alt="Noticia 1" title="Estrella del pop internacional sorprende a los fans">
         <h3>Estrella del pop internacional sorprende a los fans en el Festival de Música Épica</h3>
         <p>En una noche llena de emociones, la reconocida estrella del pop internacional, Harmony, hizo una aparición sorpresa en el Festival de Música Épica para deleitar a sus fans. Con un set enérgico y cargado de hits, Harmony se adueñó del escenario principal, desatando la euforia entre la multitud. Los asistentes quedaron maravillados con su talento vocal, su coreografía impecable y su carisma deslumbrante. Sin duda, fue un momento inolvidable para los fanáticos del festival.</p>
       </div>
       <div class="news">
-        <img src="./images/craiyon_174247_Nueva_promesa_del_indie_rock_se_roba_el_show_en_el_Festival_de_M_sica_Alternativa.png" alt="Noticia 2">
+        <img src="./images/craiyon_174247_Nueva_promesa_del_indie_rock_se_roba_el_show_en_el_Festival_de_M_sica_Alternativa.png" alt="Noticia 2" title="Nueva promesa del indie rock">
         <h3>Nueva promesa del indie rock se roba el show en el Festival de Música Alternativa</h3>
         <p>El Festival de Música Alternativa fue testigo de una actuación extraordinaria por parte de la nueva promesa del indie rock, The Midnight Haze. Con su sonido fresco y su actitud desenfadada, la banda cautivó a la audiencia con su música enérgica y letras conmovedoras. La combinación perfecta entre guitarras vibrantes y melodías adictivas llevó a los asistentes a un estado de éxtasis musical. The Midnight Haze demostró que son una fuerza imparable en la escena del rock independiente.</p>
       </div>
       <div class="news">
-        <img src="./images/craiyon_174315_Innovador_DJ_sorprende_al_p_blico_con_un_set_revolucionario_en_el_Festival_de_M_sica_Electr_nica.png" alt="Noticia 3">
+        <img src="./images/craiyon_174315_Innovador_DJ_sorprende_al_p_blico_con_un_set_revolucionario_en_el_Festival_de_M_sica_Electr_nica.png" alt="Noticia 3" title="Innovador DJ sorprende al público con un set revolucionario">
         <h3>Innovador DJ sorprende al público con un set revolucionario en el Festival de Música Electrónica</h3>
         <p>El Festival de Música Electrónica se convirtió en el epicentro de la innovación musical cuando el visionario DJ, Neonix, subió al escenario principal. Con una combinación única de géneros y una fusión de sonidos electrónicos vanguardistas, Neonix llevó al público a un viaje sónico sin precedentes. Su dominio de la mezcla en vivo y su habilidad para crear una atmósfera hipnótica mantuvieron a todos los asistentes inmersos en una experiencia de baile inigualable. Neonix dejó una marca indeleble en la historia del festival.</p>
       </div>
@@ -169,7 +169,7 @@
 
   <section id="localizacion">
   <h2>Localización</h2>
-  <img src="./images/craiyon_175831_Mapa_en_2D_de_un_festival_de_musica.png">
+  <img src="./images/craiyon_175831_Mapa_en_2D_de_un_festival_de_musica.png" title="Mapa del festival">
   <div class="map-container">
     <div id="map"></div>
     <div class="description">
